Closure_8/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_8_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_8/Closure/evosuite/3/com/google/javascript/jscomp/CollapseVariableDeclarations_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_8/Closure/evosuite/3/com/google/javascript/jscomp/CollapseVariableDeclarations_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_8/Closure/evosuite/3/com/google/javascript/jscomp/CollapseVariableDeclarations_ESTest.java:71: error: cannot find symbol
      assertEquals(4096, node0.getSourcePosition());
                              ^
  symbol:   method getSourcePosition()
  location: variable node0 of type Node
1 error
